# smart-cli-todo

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
src/: cli.py  config.py  core.py  semantic.py  storage.py  utils.py
tests/: conftest.py  test_config.py  test_core.py  test_search.py  test_storage.py  test_utils.py
